# ndk_demo

./: README.md
AndFixDemo/app/: build.gradle
AndFixDemo/app/src/androidTest/java/com/example/andfixdemo/: ExampleInstrumentedTest.java
AndFixDemo/app/src/main/: AndroidManifest.xml
AndFixDemo/app/src/main/cpp/: art_5_1.h  native-lib.cpp
AndFixDemo/app/src/main/java/com/example/andfixdemo/: DexManager.java  MainActivity.java  MethodFix.java  Work.java  WorkFix.java
AndFixDemo/app/src/main/res/layout/: activity_main.xml
AndFixDemo/app/src/test/java/com/example/andfixdemo/: ExampleUnitTest.java
AndFixDemo/gradle/wrapper/: gradle-wrapper.properties
CMarkDemo/: settings.gradle
CMarkDemo/app/: build.gradle
CMarkDemo/app/src/androidTest/java/com/example/cmarkdemo/: ExampleInstrumentedTest.java
CMarkDemo/app/src/main/: AndroidManifest.xml
CMarkDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
CMarkDemo/app/src/main/java/com/example/cmarkdemo/: MainActivity.java
CMarkDemo/app/src/main/res/values/: strings.xml
CMarkDemo/app/src/test/java/com/example/cmarkdemo/: ExampleUnitTest.java
CMarkDemo/gradle/wrapper/: gradle-wrapper.properties
LoadGif/: settings.gradle
LoadGif/app/: build.gradle
LoadGif/app/src/androidTest/java/com/example/loadgif/: ExampleInstrumentedTest.java
LoadGif/app/src/main/: AndroidManifest.xml
LoadGif/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
LoadGif/app/src/main/java/com/example/loadgif/: GifNativeDecoder.java  MainActivity.java
LoadGif/app/src/main/res/layout/: activity_main.xml
LoadGif/app/src/main/res/values/: strings.xml
LoadGif/app/src/test/java/com/example/loadgif/: ExampleUnitTest.java
LoadGif/gradle/wrapper/: gradle-wrapper.properties
Ndk_1/: settings.gradle
Ndk_1/app/: build.gradle
Ndk_1/app/src/androidTest/java/com/example/ndk_1/: ExampleInstrumentedTest.java
Ndk_1/app/src/main/: AndroidManifest.xml
Ndk_1/app/src/main/java/com/example/ndk_1/: MainActivity.java
Ndk_1/app/src/main/ndkBuild/: Android.mk  hello-jni.c
Ndk_1/app/src/main/res/values/: strings.xml
Ndk_1/app/src/test/java/com/example/ndk_1/: ExampleUnitTest.java
Ndk_1/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/androidTest/java/com/example/bsdiffdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/bsdiffdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
